--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>JavaScript</title>
 </head>
 <body>
+    <p>In JavaScript, <strong>null</strong> is not a reference to a <i>non-existing object</i> non-existing object or a null pointer like in some other languages.
+        It’s just a special value which represents nothing, empty or value unknown.
+       The code above states that age is unknown or empty for some reason.</p>
     <script>
+        
+        var a = 700;
+        a -= 5;
+        document.write(a);
+        document.write("<br>");
         document.write("Hello Jamal!");
     </script>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
