--- a/links.html
+++ b/links.html
@@ -9,6 +9,7 @@
 
     <h1 style="color:brown;">Franz Mehring Platz</h1>
     <p>Foodie People <a href="images.html" target="_blank">Click here </a></p>
-    
+     <!-- <a></a> tag is used for link   -->
+
 </body>
 </html>
