--- a/lists.html
+++ b/lists.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <ul>
-        <li>List item 1</li>
-        <li>List item 2</li>
+        <h1>CATEGORIES</h1>
+        <li><a href="document.html"> List item 1</a></li>
+        <li><img width="100"  src="Images/Z.jpg" alt=""></li>
         <li>List item 3</li>
     </ul>
     
     <ol>
-        <li>List item 1</li>
-        <li>List item 2</li>
-        <li>List item 3</li>
+        <li>Home</li>
+        <li>About </li>
+        <li>Contact</li>
 
     </ol>
     
