--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,7 @@
 <body>
     <h1>The form action attribute</h1>
      <form action="process.php" method="POST">
-         <!-- //form action="" is used for sending data to the server -->
+         <!-- //action="" is used for sending data to the server -->
          
      <label for="name"> Name 
         <!-- <label for="Name" is same as <p>Name  -->
