--- a/images.html
+++ b/images.html
@@ -9,5 +9,6 @@
     <h1>ZOYA KITCHEN</h1>
     <img width="600" height="400"
     src="Images/ZoyaKitchen.jpg">
+    <img width="" src=""
 </body>
 </html>
