--- a/HTML/id_classes.html
+++ b/HTML/id_classes.html
@@ -2,19 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Selectors</title>
+    <title>ID's & Classes</title>
     <link rel="stylesheet" href="CSS/style.css">
 
 </head>
 <body>
     <div> <!--<div> tag is used for division  -->
         
-    <p>
-     <b>
-     I am using <a style="color:red;"> CSS Styling</a> .
-     </b>
-     </p>
-     <p> <b> Second Paragraph </b></p>
+    <p id="firstPara"><b>  I am using CSS Styling.</b></p>
+
+    <p id="firstPara"><b> Second Paragraph </b></p>
 
     </div>
  
