basic HTML to JavaScript connection

--- a/HTML/id_classes.html
+++ b/HTML/id_classes.html
@@ -11,7 +11,7 @@
         
     <p id="firstPara"><b>  I am using CSS Styling.</b></p>
 
-    <p id="firstPara"><b> Second Paragraph </b></p>
+    <p class="firstPara"><b> Second Paragraph </b></p>
 
     </div>
  
