--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    
 </head>
 <body>        
-    <script src="index.js">  
-        
-     </script>
+   <script> src="JS/index.js" </script>
+ 
 </body>
 </html>
