--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript</title>
+    <title>Document</title>
     
+    <script src="../JS/index.js"> 
+    
+    </script>
 </head>
-<body>        
-   <script src="JS/index.js> </script>
- 
+<body>
+  <!-- <button id="x">Make Green</button>
+  <h1 id="y">Jamal</h1> -->
+
+  
+
+
 </body>
 </html>
