--- a/HTML/link_images.html
+++ b/HTML/link_images.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-   
-    <a href="images.html" target="_blank"> CLICK HERE
-         
-        <img src="Images/hunger.jpg" alt="">
+  </head>
+  <body>
+    <a href="images.html" target="_blank">
+      <br />
+      CLICK HERE
+
+      <img width="600" height="400" src="/Images/hunger.jpg" alt="" />
     </a>
-</body>
+  </body>
 </html>
