--- a/HTML/links.html
+++ b/HTML/links.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-
-    <h1 style="color:brown;">Franz Mehring Platz</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Links</title>
+  </head>
+  <body>
+    <h1 style="color: brown;">Franz Mehring Platz</h1>
     <p>Foodie People <a href="images.html" target="_blank">Click here </a></p>
-     <!-- <a></a> tag is used for link   -->
-
-</body>
+    <!-- <a></a> tag is used for link   -->
+    <a href="https://facebook.com">Social Media</a>
+  </body>
 </html>
