--- a/HTML/images.html
+++ b/HTML/images.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>ZOYA KITCHEN</h1>
-    <img width="600" height="400"
-    src="Images/ZoyaKitchen.jpg">
-    <img width="" src=""
-</body>
+    <img width="600" height="400" src="/Images/ZoyaKitchen.jpg" />
+  </body>
 </html>
