--- a/HTML/Stopwatch1.html
+++ b/HTML/Stopwatch1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CLOCK1</title>
+    <title>STOPWATCH1</title>
   </head>
   <body>
     <div class="wrapper">
