--- a/HTML/JamalTodoList.html
+++ b/HTML/JamalTodoList.html
@@ -13,7 +13,7 @@
       integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/CSS/Stopwatch2.css" />
+    <link rel="stylesheet" href="/CSS/JamalTodoList.css" />
     <title>Jamal's Todo List project</title>
   </head>
   <body>
@@ -27,7 +27,14 @@
       </button>
     </form>
     <div class="todo-container">
-      <ul class="todo-list"></ul>
+      <ul class="todo-list">
+        <div class="todo">
+          <li>
+            <button>Delete</button>
+            <button>Checked</button>
+          </li>
+        </div>
+      </ul>
     </div>
 
     <script src="/JS/Stopwatch1.js"></script>
