--- a/HTML/tables.html
+++ b/HTML/tables.html
@@ -14,7 +14,7 @@
             <!-- table row= tr -->
         <th>   First Name,  </th> 
         <!-- //table heading= th  -->
-        <th>  Last Name   </th>
+        <!-- <th>  Last Name   </th> 
         </tr>
         </thead>
 
